<resources>
    <string name="app_name">布布密码生成器</string>
    <string name="password_generator_title">布布随机密码生成器</string>
    <string name="password_length">密码长度: %d</string>
    <string name="character_types">字符类型选择</string>
    <string name="include_lowercase">包含小写字母 (a-z)</string>
    <string name="include_uppercase">包含大写字母 (A-Z)</string>
    <string name="include_numbers">包含数字 (0-9)</string>
    <string name="include_symbols">包含特殊符号 (!@-_$()=[])</string>
    <string name="generate_password">生成密码</string>
    <string name="generated_password">生成的密码</string>
    <string name="password_placeholder">生成的密码将显示在这里</string>
    <string name="copy_password">复制密码</string>
    <string name="password_copied">密码已复制到剪贴板</string>
    <string name="select_at_least_one">请至少选择一种字符类型</string>
    <string name="min_length">4</string>
    <string name="max_length">50</string>
</resources>